# francois-clement-pattern

work/ButtonManager/ide-vscode/ButtonManager/: ButtonManager.code-workspace  platformio.ini
work/ButtonManager/ide-vscode/ButtonManager/.scripts/: sources_xf_core.py  sources_xf_port_zephyr.py
work/ButtonManager/ide-vscode/ButtonManager/config/: gui-task-config.h  xf-config.h
work/ButtonManager/ide-vscode/ButtonManager/src/: main.cpp
work/ButtonManager/ide-vscode/ButtonManager/zephyr/: CMakeLists.txt  prj.conf
work/ButtonManager/ide-vscode/ButtonManager/zephyr/boards/shields/f7disco_extension_board/: Kconfig.shield  f7disco_extension_board.overlay
work/ButtonManager/src/app/: ButtonEventsLogger.cpp  ButtonEventsLogger.h  factory.cpp  factory.h  gui-task.cpp  gui-task.h
work/ButtonManager/src/mdw/button/: ButtonEventsHandler.cpp  ButtonEventsHandler.h  ButtonStateSm.cpp  ButtonStateSm.h
work/ButtonManager/src/platform/f7-disco-zephyr/: CHANGELOG.md  README.md
work/ButtonManager/src/platform/f7-disco-zephyr/board/: ButtonsController.cpp  ButtonsController.h  board.cpp  board.h  ledcontroller.cpp  ledcontroller.h  trace.cpp
work/ButtonManager/src/platform/f7-disco-zephyr/config/: trace-config.h
work/ButtonManager/src/platform/f7-disco-zephyr/helpers/: sysmem.cpp
work/ButtonManager/src/xf/core/: behavior.cpp  customevent.cpp  defaulttransition.cpp  dispatcher.cpp  initialevent.cpp
work/ButtonManager/src/xf/doxygen/: Doxyfile
work/ButtonManager/src/xf/include/xf/: behavior.h  customevent.h  dispatcher.h  (+3 more)
work/ButtonManager/src/xf/port/: README.md
(+31 files in other folders)
